k8s/01-namespace-configmap-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: liyu-bingo
  labels:
    name: liyu-bingo
